# PoC-Task-Manager

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/: __init__.py  logger.py  mcp_server.py
backend/graphs/: __init__.py  task_agent.py
backend/prompts/: __init__.py  task_prompts.py
backend/tools/: __init__.py  interaction_messages.py  task_tools.py
backend/types/: __init__.py  types.py
my_agent/utils/: nodes.py  state.py
tests/: conftest.py  test_mcp_server.py
tests/graphs/: test_task_agent.py
tests/tools/: test_task_tools.py
