[tool.poetry]
name = "my_agent"
version = "0.1.0"
description = "Example LangGraph project for deployment to LangGraph Cloud"
authors = [
    "langchain-ai"
]
packages = [
    { include = "my_agent" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
langgraph = "^0.3.27"
langchain_anthropic = "^0.1.21"
langchain_core = "^0.2.24"
langchain_openai = "^0.1.0"
tavily-python = "^0.3.0"
langchain_community = "^0.2.0"
pydantic = "^2.0.0"
langgraph-api = "^0.2.27"
langgraph-runtime-inmem = "^0.0.9"
langgraph-cli = {extras = ["inmem"], version = "^0.2.27"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"